# YoctoStudy

./: .project  CMakeLists.txt  README
CustomLayerAndRecipe/: .gitignore  README
CustomLayerAndRecipe/meta-custom/recipes-demo/custom-recipe-demo/: custom-recipe-demo_0.1.bb
bitbake_hello_world/: .gitignore  README  config_env.sh
bitbake_hello_world/classes/: base.bbclass
bitbake_hello_world/conf/: bblayers.conf  bitbake.conf
bitbake_hello_world/meta-mylayer/: printhello.bb
bitbake_hello_world/mylayer/conf/: layer.conf
custom_layer_and_recipe/: README
custom_layer_and_recipe/meta-custom/: README
genericx86/: README
poky/: README
poky/bitbake/lib/bb/pysh/: pyshtables.py
source/: main.cpp
xfce_x86-64/: README
